# marketing_agency_altivus

./: README.md  pyproject.toml
src/marketing_agency_altivus/: crew.py  main.py  posts-2024-07-30.txt  posts-2024-08-08.txt
src/marketing_agency_altivus/config/: agents.py  tasks.py
src/marketing_agency_altivus/tools/: Tools_1A.py
